hphp/test/slow/error_handler/error_get_last_error.php.expectf
NULL
Undefined variable: x
NULL
no x
NULL

Fatal error: Call to undefined function nosuchfunc() in %s on line 28
int(28)
